# faiss-rag

./: HOMEWORK.md  README.md  pnpm-lock.yaml  pyproject.toml
src/faiss_rag/: __init__.py  backend.py  main.py
