[project]
name = "faiss-rag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "futabato", email = "01futabato10@gmail.com" }
]
dependencies = [
    "langchain>=0.3.22",
    "openai>=1.70.0",
    "faiss-cpu>=1.10.0",
    "sentence-transformers>=4.0.1",
    "pymupdf>=1.25.5",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.12",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "ruff>=0.11.3",
    "pdfplumber>=0.11.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/faiss_rag"]
